--- a/apps/frontend/src/components/post/post-buttons/post-buttons.module.css
+++ b/apps/frontend/src/components/post/post-buttons/post-buttons.module.css
@@ -1,26 +1,31 @@
 .list {
 	display: flex;
 	list-style: none;
-	gap: 2rem;
+	gap: 0.5rem;
 	margin-top: 1rem;
 }
 
 .listItem {
 	display: flex;
-	justify-content: center;
+	justify-content: start;
 	align-items: center;
 	gap: 0.25rem;
+	overflow: hidden;
+	flex-basis: 4rem;
 }
 
 .button {
 	display: flex;
 	align-items: center;
-	gap: 0.25rem;
+	gap: 0.5rem;
 	font-size: 1.25rem;
 }
 
 .buttonsCount {
 	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
 }
 
 .placeholder {
